...

/// Versión/traducción bíblica disponible.
enum BibleVersion {
  rvr1960(
    id: 'RVR1960',
    displayName: 'Reina-Valera 1960',
    shortName: 'RVR60',
    fileName: 'Reina Valera 1960.xml',
    language: BibleLanguage.spanish,
  ),
  nvi(
    id: 'NVI',
    displayName: 'Nueva Versión Internacional',
    shortName: 'NVI',
    fileName: 'NVI.xml',
    language: BibleLanguage.spanish,
  ),
  lbla(
...
